# mini-char

./: 5bit.cpp  5bit.h  CMakeLists.txt  README.md  main.cpp
include/: minichar.h
src/: 5bit.cpp  5bit.h  minichar.cpp
tests/: CMakeLists.txt  test_5bit.cpp
